# sha3

./: Sha3256.cabal  stack.yaml
app/: Main.hs
