name:                Sha3256
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Sha3256#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2016 Andre Van Der Merwe
category:            Console
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sha3256
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
                     , text
                     , cryptonite
                     , bytestring
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/Sha3256
